[gd_scene load_steps=4 format=3 uid="uid://dlvtkf0mlykdp"]

[ext_resource type="Script" uid="uid://cwdcgtwepfvwf" path="res://scripts/MainMenu/MainMenu.gd" id="1_t66la"]
[ext_resource type="Texture2D" uid="uid://ccpgaygkjrnjt" path="res://assets/sprites/background/BG_Piramide-01.png" id="2_qq86l"]
[ext_resource type="AudioStream" uid="uid://boxomsmwdlbri" path="res://assets/audio/menu/UI_Navigation.ogg" id="2_r53iu"]

[node name="Menu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_t66la")

[node name="Background" type="TextureRect" parent="."]
layout_mode = 0
offset_right = 1920.0
offset_bottom = 1080.0
texture = ExtResource("2_qq86l")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.478431)

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -337.0
offset_top = -196.0
offset_right = 337.0
offset_bottom = 196.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 20

[node name="Jugar" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 90
text = "Jugar"

[node name="opciones" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 90
text = "Opciones"

[node name="Salir" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 90
text = "Salir"

[node name="SoundPlayer" type="AudioStreamPlayer" parent="VBoxContainer"]
stream = ExtResource("2_r53iu")

[connection signal="pressed" from="VBoxContainer/Jugar" to="." method="_on_jugar_pressed"]
[connection signal="pressed" from="VBoxContainer/opciones" to="." method="_on_opciones_pressed"]
[connection signal="pressed" from="VBoxContainer/Salir" to="." method="_on_salir_pressed"]
